Turns project into jekyll-theme-dml

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,43 +1,54 @@
 <footer class="site-footer">
 
   <div class="wrapper">
-
-    <h2 class="footer-heading">{{ site.title | escape }}</h2>
-
     <div class="footer-col-wrapper">
       <div class="footer-col footer-col-1">
         <ul class="contact-list">
           <li>
-            {% if site.author %}
-              {{ site.author | escape }}
-            {% else %}
-              {{ site.title | escape }}
-            {% endif %}
+            {{ site.title | escape }}
             </li>
-            {% if site.email %}
-            <li><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
+            {% assign email = site.email %}
+            {% if email %}
+              <li><a href="mailto:{{ site.email }}">{{ email }}</a></li>
             {% endif %}
         </ul>
       </div>
 
       <div class="footer-col footer-col-2">
         <ul class="social-media-list">
-          {% if site.github_username %}
-          <li>
-            {% include icon-github.html username=site.github_username %}
-          </li>
+          {% if site.feed.path %}
+            <li>
+              {% include icon-feed.html %}
+            </li>
           {% endif %}
 
-          {% if site.twitter_username %}
-          <li>
-            {% include icon-twitter.html username=site.twitter_username %}
-          </li>
+          {% assign github_username = site.data.config.github_username | default: site.github_username %}
+          {% if github_username %}
+            <li>
+              {% include icon-github.html username=github_username %}
+            </li>
+          {% endif %}
+
+          {% assign twitter_username = site.data.config.twitter_username | default: site.twitter_username %}
+          {% if twitter_username %}
+            <li>
+              {% include icon-twitter.html username=twitter_username %}
+            </li>
+          {% endif %}
+
+          {% assign facebook_username = site.data.config.facebook_username | default: site.facebook_username %}
+          {% if facebook_username %}
+            <li>
+              {% include icon-facebook.html username=facebook_username %}
+            </li>
           {% endif %}
         </ul>
       </div>
 
       <div class="footer-col footer-col-3">
-        <p>{{ site.description | escape }}</p>
+        {% assign localized_description = site.data.localization.description[page.lang] %}
+        {% assign description = localized_description | default: site.description %}
+        <p>{{ description | escape }}</p>
       </div>
     </div>
 
