--- a/assets/main.scss
+++ b/assets/main.scss
@@ -1,5 +1,5 @@
 ---
-# Only the main Sass file needs front matter (the dashes are enough)
+# YAML front matter is used to allow file render
 ---
 
-@import "minima";
+@import "jekyll-theme-dml";
