--- a/_sass/jekyll-theme-dml/_layout.scss
+++ b/_sass/jekyll-theme-dml/_layout.scss
@@ -2,8 +2,8 @@
  * Site header
  */
 .site-header {
-  border-top: 5px solid $grey-color-dark;
-  border-bottom: 1px solid $grey-color-light;
+  border-top: 5px solid $border-color-dark; //$grey-color-dark;
+  border-bottom: 2px solid $border-color-dark; //$grey-color-light;
   min-height: $spacing-unit * 1.865;
 
   // Positioning context for the mobile navigation icon
@@ -12,15 +12,15 @@
 
 .site-title {
   @include relative-font-size(1.625);
-  font-weight: 300;
+  font-weight: bold;
   line-height: $base-line-height * $base-font-size * 2.25;
-  letter-spacing: -1px;
+  letter-spacing: 0.5px;
   margin-bottom: 0;
   float: left;
 
   &,
   &:visited {
-    color: $grey-color-dark;
+    color: $brand-color //$grey-color-dark;
   }
 }
 
@@ -37,7 +37,7 @@
   }
 
   .page-link {
-    color: $text-color;
+    color: $grey-color-light; //$text-color;
     line-height: $base-line-height;
 
     // Gaps between nav items, but not on the last one
@@ -51,7 +51,7 @@
     top: 9px;
     right: $spacing-unit / 2;
     background-color: $background-color;
-    border: 1px solid $grey-color-light;
+    border: 2px solid $border-color; //$grey-color-light;
     border-radius: 5px;
     text-align: right;
 
@@ -106,7 +106,7 @@
  * Site footer
  */
 .site-footer {
-  border-top: 1px solid $grey-color-light;
+  border-top: 2px solid $border-color-dark; //$grey-color-light;
   padding: $spacing-unit 0;
 }
 
@@ -135,18 +135,22 @@
 }
 
 .footer-col-1 {
+  width: 47%;
   width: -webkit-calc(35% - (#{$spacing-unit} / 2));
   width:         calc(35% - (#{$spacing-unit} / 2));
 }
 
 .footer-col-2 {
+  width: 47%;
   width: -webkit-calc(20% - (#{$spacing-unit} / 2));
   width:         calc(20% - (#{$spacing-unit} / 2));
 }
 
 .footer-col-3 {
+  width: 100%;
   width: -webkit-calc(45% - (#{$spacing-unit} / 2));
   width:         calc(45% - (#{$spacing-unit} / 2));
+  text-align: center;
 }
 
 @include media-query($on-laptop) {
@@ -175,12 +179,17 @@
 /**
  * Page content
  */
+.page-header {
+  margin-bottom: $spacing-unit;
+  border-bottom: 2px dashed $border-color;
+}
+
 .page-content {
   padding: $spacing-unit 0;
 }
 
 .page-heading {
-  @include relative-font-size(1.25);
+  //@include relative-font-size(1.25);
 }
 
 .post-list {
@@ -199,9 +208,42 @@
 
 .post-link {
   display: block;
-  @include relative-font-size(1.5);
+  @include relative-font-size(1.25);
 }
 
+.pagination {
+  text-align: center;
+  margin-bottom: $spacing-unit;
+
+  .previous, .next {
+    padding: 0 5px;
+
+    &.disabled {
+      color: $grey-color-dark;
+    }
+  }
+
+  .page-link {
+    padding: 1px 8px;
+    display: inline-block;
+    border: 1px solid $border-color-light;
+    vertical-align: middle;
+
+    &.disabled {
+      color: $grey-color-dark;
+      border-color: $border-color-dark;
+    }
+  }
+}
+
+.user-image {
+  max-width: $spacing-unit;
+  max-height: $spacing-unit
+}
+
+.user-name {
+  margin-left: 10px;
+}
 
 
 /**
@@ -209,15 +251,16 @@
  */
 .post-header {
   margin-bottom: $spacing-unit;
+  border-bottom: 2px dashed $border-color;
 }
 
 .post-title {
-  @include relative-font-size(2.625);
+  @include relative-font-size(2);
   letter-spacing: -1px;
   line-height: 1;
 
   @include media-query($on-laptop) {
-    @include relative-font-size(2.25);
+    @include relative-font-size(1.8);
   }
 }
 
@@ -236,6 +279,7 @@
     @include relative-font-size(1.625);
 
     @include media-query($on-laptop) {
+
       @include relative-font-size(1.375);
     }
   }
@@ -246,5 +290,15 @@
     @include media-query($on-laptop) {
       @include relative-font-size(1.125);
     }
+  }
+}
+
+.comments {
+  margin-top: 50px;
+  padding-top: 15px;
+  border-top: 2px dashed $border-color;
+
+  h2 {
+    color: $grey-color;
   }
 }
