--- a/_sass/jekyll-theme-dml/_syntax-highlighting.scss
+++ b/_sass/jekyll-theme-dml/_syntax-highlighting.scss
@@ -2,11 +2,11 @@
  * Syntax highlighting styles
  */
 .highlight {
-  background: #fff;
+  background: #222; //#fff;
   @extend %vertical-rhythm;
 
   .highlighter-rouge & {
-    background: #eef;
+    background: #222; //#eef;
   }
 
   .c     { color: #998; font-style: italic } // Comment
