Simplify page/site language identification

--- a/_includes/date.html
+++ b/_includes/date.html
@@ -1,10 +1,9 @@
-{% assign date_config_lang = site.data.localization.date_format | default: site.data.config.date_format | default: site.theme_config.date_format %}
-{% assign default_lang = site.lang | default: "en" %}
+{% include language.html %}
 
-{% if date_config_lang.first %}
-  {% assign date_config = date_config_lang[page.lang] | default: date_config_lang[default_lang] %}
-{% else %}
-  {% assign date_config = date_config_lang %}
+{% assign date_config = site.data.localization.date_format | default: site.theme_config.date_format
+  | default: site.data.config.date_format | default: site.date_format %}
+{% if date_config.first %}
+  {% assign date_config = date_config[_lang] %}
 {% endif %}
 
 {% assign date_format = date_config | default: "%b %-d, %Y" %}
