--- a/_layouts/lang_chooser.html
+++ b/_layouts/lang_chooser.html
@@ -4,9 +4,16 @@ layout: default
 <div class="home">
 
   {% assign langs = site.data.config.langs | default: site.theme_config.langs %}
-  {% assign default_lang = site.lang | default: "en" %}
+  {% include language.html %}
   <header class="page-header">
-    <h1 class="page-heading">{% include localized_string.html string="Choose Language" lang=lang %}</h1>
+    <h1 class="page-heading">
+      {% include localized_string.html string="Choose Language" %}
+      {% for loop_lang in langs %}
+        {% if forloop.index0 > 0 and site.data.localization.strings.choose_language[loop_lang.first] %}
+          / {% include localized_string.html string="Choose Language" lang=loop_lang.first %}
+        {% endif %}
+      {% endfor %}
+    </h1>
   </header>
   <ul class="lang-list">
     {% if langs %}
