--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -16,7 +16,8 @@
 
       <div class="footer-col footer-col-2">
         <ul class="social-media-list">
-          {% if site.feed.path %}
+          {% assign feed_path = site.data.config.feed_path | default: site.theme_config.feed_path | default: site.feed.path %}
+          {% if feed_path %}
             <li>
               {% include icon-feed.html %}
             </li>
