--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,9 +13,7 @@
     <link rel="icon" type="image/x-icon" href="{{ icon }}">
   {% endif %}
 
-  {% if site.feed.path %}
-    <link rel="alternate" type="application/rss+xml" title="{{ site.title | escape }}" href="{{ site.feed.path | relative_url }}">
-  {% endif %}
+  {% include feed_meta.html %}
 
   {% if jekyll.environment == 'production' and site.google_analytics %}
     {% include google-analytics.html %}
