--- a/_includes/language.html
+++ b/_includes/language.html
@@ -1,1 +1,3 @@
-{% assign _lang = page.lang | default: site.lang | default: "en" %}
+{% if page.lang != "nil" %}
+  {% assign _lang = page.lang | default: site.lang | default: "en" %}
+{% endif %}
