Fix google analytics and disqus comments implementation
Now it can also be used for Github Pages

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -46,6 +46,8 @@ layout: default
   {% endfor %}
 </div>
 
-{% if site.disqus.shortname %}
-  {% include disqus_comments.html %}
+{% if jekyll.environment == "production" or jekyll.environment == 'dotcom' %}
+  {% if site.disqus.shortname and page.comments != false %}
+    {% include disqus_comments.html %}
+  {% endif %}
 {% endif %}
